# Robotics_Project

./: .gitmodules  Kalman_filter.py  README.md  estimation.py
catkin_ws/: run_in_container.sh
catkin_ws/devel/include/first_project/: gps_odometer_paramsConfig.h  odometer_paramsConfig.h
catkin_ws/devel/lib/first_project/: gps_odometer  odometer  sector_time
catkin_ws/devel/lib/python3/dist-packages/first_project/cfg/: gps_odometer_paramsConfig.py  odometer_paramsConfig.py
catkin_ws/devel/share/first_project/cmake/: first_projectConfig.cmake
catkin_ws/devel/share/first_project/docs/: gps_odometer_paramsConfig-usage.dox  gps_odometer_paramsConfig.dox  gps_odometer_paramsConfig.wikidoc  odometer_paramsConfig-usage.dox  odometer_paramsConfig.dox  odometer_paramsConfig.wikidoc
catkin_ws/src/first_project/: CMakeLists.txt  package.xml  sandBox.py
catkin_ws/src/first_project/config/: odometer.cfg  odometer_params.cfg
catkin_ws/src/first_project/launch/: launch.launch  test_launch.launch
catkin_ws/src/first_project/msg/: Custom.msg
catkin_ws/src/first_project/src/: EKF_pub_sub.cpp  Kalman_filter.cpp  Kalman_filter.h  gps_pub_sub.cpp  gps_sub.cpp  odom_pub_sub.cpp  sector_time_pub_sub.cpp
data/my_drive/: gps_odom.csv  odom.csv
data/project/: speedsteer.csv
